<resources>
    <string name="app_name">Calculator</string>
    <string name="screen_hint">type an expression</string>
    <string name="clearButton">C</string>
    <string name="percentage">\u0025</string>
    <string name="sign_divide">\u00F7</string>
    <string name="button_seven">7</string>
    <string name="button_eight">8</string>
    <string name="button_nine">9</string>
    <string name="sign_plus">+</string>
    <string name="button_four">4</string>
    <string name="button_five">5</string>
    <string name="button_six">6</string>
    <string name="sing_multiply">X</string>
    <string name="button_one">1</string>
    <string name="button_two">2</string>
    <string name="button_three">3</string>
    <string name="sign_minus">-</string>
    <string name="sign_plus_minus">\u00B1</string>
    <string name="button_zero">0</string>
    <string name="sign_button">\u2022</string>
    <string name="sign_equals">\u003D</string>
</resources>
